# libsegmenter

./: .gitignore  404.html  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  checkCola.py  defaultWindowSelector.py  format.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  python-publish.yml.back  segmenter.py  segmenterTensorFlow.py  setup.py  testPytorchSegmenter.py  testTensorFlowSegmenter.py  windowTest.py
.github/workflows/: deploy.yml  python-publish.yml  update-citation.yml
api/AsymmetricWindowSelector/: index.html
api/Segmenter/: index.html
api/TransformSelector/: index.html
api/Window/: index.html
api/WindowSelector/: index.html
api/backends/SegmenterNumpy/: index.html
api/backends/SegmenterOctave/: index.html
api/backends/SegmenterTensorFlow/: index.html
api/backends/SegmenterTorch/: index.html
api/transforms/BPD/: index.html
api/transforms/BPD/BPDNumpy/: index.html
api/transforms/BPD/BPDOctave/: index.html
api/transforms/BPD/BPDTensorFlow/: index.html
api/transforms/BPD/BPDTorch/: index.html
api/transforms/Magnitude/: index.html
api/transforms/Magnitude/MagnitudeNumpy/: index.html
api/transforms/Magnitude/MagnitudeOctave/: index.html
api/transforms/Magnitude/MagnitudeTensorFlow/: index.html
api/transforms/Magnitude/MagnitudeTorch/: index.html
api/transforms/MagnitudePhase/: index.html
api/transforms/Phase/: index.html
api/transforms/Phase/PhaseNumpy/: index.html
api/transforms/Phase/PhaseOctave/: index.html
api/transforms/Phase/PhaseTensorFlow/: index.html
api/transforms/Phase/PhaseTorch/: index.html
api/transforms/Spectrogram/: index.html
api/transforms/Spectrogram/SpectrogramNumpy/: index.html
api/transforms/Spectrogram/SpectrogramOctave/: index.html
api/transforms/Spectrogram/SpectrogramTensorFlow/: index.html
api/transforms/Spectrogram/SpectrogramTorch/: index.html
api/transforms/bpd/BPDNumpy/: index.html
api/transforms/bpd/BPDOctave/: index.html
api/transforms/bpd/BPDTensorFlow/: index.html
api/transforms/bpd/BPDTorch/: index.html
api/transforms/magnitude/MagnitudeNumpy/: index.html
api/transforms/magnitude/MagnitudeOctave/: index.html
api/transforms/magnitude/MagnitudeTensorFlow/: index.html
api/transforms/magnitude/MagnitudeTorch/: index.html
api/transforms/magnitude_phase/MagnitudePhaseNumpy/: index.html
api/transforms/magnitude_phase/MagnitudePhaseTensorFlow/: index.html
api/transforms/magnitude_phase/MagnitudePhaseTorch/: index.html
api/transforms/phase/PhaseNumpy/: index.html
api/transforms/phase/PhaseOctave/: index.html
api/transforms/phase/PhaseTensorFlow/: index.html
api/transforms/phase/PhaseTorch/: index.html
api/transforms/spectrogram/SpectrogramNumpy/: index.html
api/transforms/spectrogram/SpectrogramOctave/: index.html
api/transforms/spectrogram/SpectrogramTensorFlow/: index.html
api/transforms/spectrogram/SpectrogramTorch/: index.html
api/util/check_cola/: index.html
api/windows/bartlett50/: index.html
api/windows/bartlett75/: index.html
api/windows/blackman67/: index.html
api/windows/hamming50/: index.html
api/windows/hamming75/: index.html
api/windows/hann50/: index.html
api/windows/hann75/: index.html
api/windows/kaiser82/: index.html
api/windows/kaiser85/: index.html
api/windows/rectangular0/: index.html
api/windows/rectangular50/: index.html
cmake/: CPM.cmake
docs/api/: AsymmetricWindowSelector.md  Segmenter.md  TransformSelector.md  Window.md  WindowSelector.md
docs/api/backends/: SegmenterNumpy.md  SegmenterOctave.md  SegmenterTensorFlow.md  SegmenterTorch.md
docs/api/transforms/: BPD.md  Magnitude.md  MagnitudePhase.md  Phase.md  Spectrogram.md
docs/api/transforms/bpd/: BPDNumpy.md  BPDOctave.md  BPDTensorFlow.md  BPDTorch.md
docs/api/transforms/magnitude/: MagnitudeNumpy.md  MagnitudeOctave.md  MagnitudeTorch.md  (+1 more)
docs/api/util/: check_cola.md
docs/api/windows/: bartlett50.md  bartlett75.md  blackman.md  blackman67.md  hamming50.md  hamming75.md  hann50.md  hann75.md  kaiser82.md  kaiser85.md  rectangular0.md  rectangular50.md
libsegmenter/: Segmenter.hpp  Segmenter.py  SegmenterBindings.cpp  SegmenterNumpy.py  SegmenterTensorFlow.py  SegmenterTorch.py  check_cola.py  colaCheck.m  default_window_selector.py  segmenter.m  windowObject.m  windowObjectNumpy.py
libsegmenter/base/: Cola.hpp  FftInterface.hpp  Helper.hpp  Mode.hpp  Parameters.hpp  Segmenter.hpp  Serialize.hpp  Span.hpp  Windows.hpp
libsegmenter/bindings/: Bindings.cpp  Bindings.hpp  ColaBindings.cpp  ColaBindings.hpp  README.md  SegmenterBindings.cpp  SegmenterBindings.hpp  SerializeBindings.cpp  SerializeBindings.hpp  WindowsBindings.cpp
search/: search_index.json
src/libsegmenter/: AsymmetricWindowSelector.m  AsymmetricWindowSelector.py  Segmenter.py  TransformSelector.py  Window.m  Window.py  WindowSelector.m  WindowSelector.py  __init__.py
src/libsegmenter/backends/: SegmenterNumpy.py  SegmenterOctave.m  SegmenterOctave.py  SegmenterTensorFlow.py  SegmenterTorch.py  common.py
src/libsegmenter/base/: Segmenter.hpp
src/libsegmenter/bindings/: Bindings.hpp  ColaBindings.hpp  WindowsBindings.hpp
src/libsegmenter/impl/: SegmenterNumpy.py
src/libsegmenter/transforms/: BPD.py  Magnitude.py  Phase.py  Spectrogram.py
src/libsegmenter/util/: checkCola.m  check_cola.py
src/libsegmenter/windows/: _bartlett.m  _blackman.m  _hamming.m  _kaiser.m  bartlett.py  bartlett50.m  bartlett75.m  bartlettWindow.m  blackman.py  blackman67.m  blackmanWindow.m  hamming.py  hamming50.m  hamming75.m  hammingWindow.m  hann.py  hann50.m  hann50.py  hann75.m  hannWindow.m  kaiser.py  kaiser82.m  kaiser85.m  kaiserWindow.m  rectangular.py
tests/: consistency.py  reconstruction.py  tmp_refs.mat
(+33 files in other folders)
