[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.10.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "libsegmenter"
version = "0.3"
description = "An opinionated segmentation library for (machine learning) audio. Note that all versions before 1.0 are considered unstable and still subject to testing..."
authors = [
    { name = "Niels de Koeijer" },
    { name = "Martin Bo Moller" }
]
dependencies = [
    "numpy"
]

# testing
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ['tests/windows.py', 'tests/creational.py', 'tests/reconstruction.py']
filterwarnings = 'error'
xfail_strict = true
