[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


# testing
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ['tests/windows.py', 'tests/creational.py', 'tests/reconstruction.py']
filterwarnings = 'error'
xfail_strict = true
